--- a/.classpath
+++ b/.classpath
@@ -3,11 +3,11 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gensrc"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/mount/home/brain/projects/tcpser4j/lib/RXTXcomm.jar"/>
-	<classpathentry kind="lib" path="C:/mount/home/brain/projects/tcpser4j/lib/dom4j-full.jar"/>
-	<classpathentry kind="lib" path="C:/mount/home/brain/projects/tcpser4j/lib/log4j-1.2.5.jar"/>
-	<classpathentry kind="lib" path="C:/mount/home/brain/projects/tcpser4j/lib/mp3/tritonus_share.jar"/>
-	<classpathentry kind="lib" path="C:/mount/home/brain/projects/tcpser4j/lib/mp3/jl1.0.jar"/>
-	<classpathentry kind="lib" path="C:/mount/home/brain/projects/tcpser4j/lib/mp3/mp3spi1.9.2.jar"/>
+	<classpathentry kind="lib" path="lib/dom4j-full.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.5.jar"/>
+	<classpathentry kind="lib" path="lib/RXTXcomm.jar"/>
+	<classpathentry kind="lib" path="lib/mp3/mp3spi1.9.2.jar"/>
+	<classpathentry kind="lib" path="lib/mp3/jl1.0.jar"/>
+	<classpathentry kind="lib" path="lib/mp3/tritonus_share.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
